--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.microsoft.projectoxford:speechrecognition:1.2.2'
         classpath 'com.android.tools.build:gradle:3.1.3'
         
 
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://csspeechstorage.blob.core.windows.net/maven/' }
     }
 }
 
