--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
@@ -33,5 +34,6 @@ dependencies {
     implementation 'com.microsoft.cognitiveservices.speech:client-sdk:1.3.1'
     implementation 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife:8.7.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
 
 }
